# TemeProg2

Tema1_pb4/: Tema1_pb4.sln
tema1_Pb8/: tema1_Pb8.sln
tema1_pb2/: tema1_pb2.sln
tema1_pb3/: tema1_pb3.sln
tema1_pb5/: tema1_pb5.sln
tema1_pb6/: tema1_pb6.sln
tema1_pb7/: tema1_pb7.sln
tema_laborator4/pb7.2/: CMakeLists.txt  main.cpp
tema_laborator4/pb7.2/LibrariiC++/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  name.sln  nameLib.vcxproj  nameLib.vcxproj.filters
tema_laborator4/pb7.2/LibrariiC++/nameLib.dir/Debug/: nameLib.dll.recipe  nameLib.ilk
tema_laborator4/pb7.2/LibrariiC++/nameLib.dir/Debug/nameLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/INSTALL/: INSTALL.recipe
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
tema_laborator4/pb7.2/LibrariiC++/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+276 files in other folders)
